# constellation_dart

./: .gitignore  .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/flutter/: generated_plugins.cmake
example/windows/flutter/: generated_plugins.cmake
lib/: constellation_dart.dart  constellation_dart_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  constellation_dart.c
windows/: CMakeLists.txt
