# The Flutter tooling requires that developers have CMake 3.10 or later
# installed. You should not increase this version, as doing so will cause
# the plugin to fail to compile for some customers of the plugin.
cmake_minimum_required(VERSION 3.10)

project(constellation_dart_library VERSION 0.0.1 LANGUAGES C)

add_library(constellation_dart SHARED
  "constellation_dart.c"
)

set_target_properties(constellation_dart PROPERTIES
  PUBLIC_HEADER constellation_dart.h
  OUTPUT_NAME "constellation_dart"
)

target_compile_definitions(constellation_dart PUBLIC DART_SHARED_LIB)
